# wtgfl-backend

./: build.sh  manage.py  pyproject.toml
polls/: admin.py  models.py  urls.py  views.py
polls/migrations/: 0001_initial.py  0002_ballot.py
polls/tests/: test_models.py  test_views.py
wtgflb/: asgi.py  settings.py  urls.py  wsgi.py
