[tool.poetry]
name = "wtgflb"
version = "0.1.0"
description = ""
authors = ["Jarno Luoma-Nirva <jln@iki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2"
gunicorn = "^20.1.0"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.8.6"
django-cors-headers = "^3.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
